# entra-id-secrets-notification

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  ci.yml  release.yml
src/: __init__.py  config.py  graph_client.py  main.py
src/application/: exceptions.py
src/application/ports/: __init__.py  credential_repository.py  notification_sender.py
src/application/use_cases/: __init__.py  check_expiring_credentials.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  application.py  credential.py  expiration_report.py
src/domain/services/: __init__.py  expiration_analyzer.py
src/domain/value_objects/: __init__.py  credential_source.py  credential_type.py  expiration_status.py  notification_level.py  thresholds.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py
src/infrastructure/adapters/api/: __init__.py  app.py  models.py
src/infrastructure/adapters/entra_id/: __init__.py  graph_client.py  repository.py
src/infrastructure/adapters/notifications/: __init__.py  base.py  email.py  graph_email.py  slack.py  teams.py  webhook.py
src/infrastructure/config/: __init__.py  settings.py
src/notifiers/: __init__.py  base.py  email_notifier.py  slack_notifier.py  teams_notifier.py  webhook_notifier.py
tests/: __init__.py  conftest.py
tests/domain/: test_credential.py  test_expiration_status.py  test_thresholds.py
tests/infrastructure/: test_graph_email.py
